<resources>
    <string name="app_name" translatable="false">Pixel-Paint</string>
    <string name="Alpha">Альфа</string>
    <string name="Red">Красный</string>
    <string name="Green">Зеленый</string>
    <string name="Blue">Синий</string>
    <string name="Clear">Очистить холст</string>
    <string name="Save">Сохранить</string>
    <string name="Start">Старт</string>
    <string name="size_key" translatable="false">file.key</string>
    <string name="fill_red">Залить красным</string>
    <string name="fill_green">Залить зеленым</string>
    <string name="fill_blue">Заливть синим</string>
    <string name="fill_custom">Залить выбранным</string>
    <string name="grid_side">Размер стороны сетки:</string>
    <string name="toast">Создан холст </string>
    <string name="Pixels"> пикселей</string>
    <string name="About">О программе</string>
    <string name="Back">Назад</string>
    <string name="Current">Текущий цвет</string>
    <string name="Sorry" translatable="false">Не реализовано</string>
    <string name="Eraser">Ластик</string>
    <string name="Paint">Рисование</string>
    <string name="Three">3 на 3</string>
</resources>