<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:stretchMode="columnWidth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </GridView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <SeekBar
        android:id="@+id/seekA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:max="255"
        android:progress="255"
        android:progressDrawable="@drawable/progress_alpha"
        android:thumb="@drawable/thumb_alpha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paint" />

    <SeekBar
        android:id="@+id/seekR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:max="255"
        android:progress="0"
        android:progressDrawable="@drawable/progress_red"
        android:thumb="@drawable/thumb_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekA" />
    <SeekBar
        android:id="@+id/seekG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:max="255"
        android:progress="255"
        android:progressDrawable="@drawable/progress_green"
        android:thumb="@drawable/thumb_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekR" />
    <SeekBar
        android:id="@+id/seekB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:max="255"
        android:progress="0"
        android:progressDrawable="@drawable/progress_blue"
        android:thumb="@drawable/thumb_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekG" />

    <TextView
        android:id="@+id/textA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/Alpha"
        android:textStyle="bold"
        android:textColor="@color/white_chess"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/seekA"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textA1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="255"
        android:textColor="@color/white_chess"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekA"
        app:layout_constraintStart_toEndOf="@id/textA" />
    <TextView
        android:id="@+id/textR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/Red"
        android:textStyle="bold"
        android:textColor="@color/white_chess"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/seekR"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textR1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textColor="@color/white_chess"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekR"
        app:layout_constraintStart_toEndOf="@id/textR" />
    <TextView
        android:id="@+id/textG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/Green"
        android:textStyle="bold"
        android:textColor="@color/white_chess"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/seekG"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textG1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="255"
        android:textColor="@color/white_chess"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekG"
        app:layout_constraintStart_toEndOf="@id/textG" />
    <TextView
        android:id="@+id/textB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/Blue"
        android:textStyle="bold"
        android:textColor="@color/white_chess"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/seekB"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textColor="@color/white_chess"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekB"
        app:layout_constraintStart_toEndOf="@id/textB" />

<!--    <TextView-->
<!--        android:id="@+id/curClr"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:background="#FF00FF00"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/Current"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="15sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/debug2"-->
<!--        app:layout_constraintTop_toTopOf="@id/paint"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/paint"/>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="@id/paint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/debug2"
        app:layout_constraintTop_toTopOf="@id/paint">

        <TextView
            android:id="@+id/curClr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF00FF00"
            android:gravity="center"
            android:text="@string/Current"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1:1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/erase"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:text=""
        android:onClick="toErase"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:foreground="@drawable/ic_erase_foreground"
        android:background="@drawable/is_disable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"/>

    <TextView
        android:id="@+id/paint"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:text=""
        android:onClick="toPaint"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:foreground="@drawable/ic_brush_foreground"
        android:background="@drawable/is_enable"
        app:layout_constraintStart_toEndOf="@id/erase"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"/>

    <TextView
        android:id="@+id/three"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:text="3x3"
        android:textStyle="bold"
        android:textColor="@color/white_chess"
        android:gravity="center"
        android:onClick="toThree"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/is_disable"
        app:layout_constraintStart_toEndOf="@id/paint"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"/>

    <TextView
        android:id="@+id/debug1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:text="X"
        android:textStyle="bold"
        android:textColor="@color/white_chess"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/is_disable"
        app:layout_constraintStart_toEndOf="@id/three"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"/>
    <TextView
        android:id="@+id/debug2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:text="Y"
        android:textStyle="bold"
        android:textColor="@color/white_chess"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/is_disable"
        app:layout_constraintStart_toEndOf="@id/debug1"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>